[gd_scene load_steps=23 format=2]

[ext_resource path="res://assets/characters/DinoSprites - doux.png" type="Texture" id=1]
[ext_resource path="res://scripts/Player_KinematicBody2D.gd" type="Script" id=2]
[ext_resource path="res://assets/sound_music/jump.wav" type="AudioStream" id=3]

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 408, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 72, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 120, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 144, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 168, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 432, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 456, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 480, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 504, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 528, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 552, 0, 24, 24 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 19 ) ],
"loop": true,
"name": "down",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 6.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "jump",
"speed": 6.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "running",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 8, 10 )

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 9.5, 8.5 )

[node name="Player_KinematicBody2D" type="KinematicBody2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 1.4, 1.4 )
frames = SubResource( 12 )
animation = "running"
frame = 4

[node name="Idle_CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 18 )

[node name="Running_CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( 5.5, 1.5 )
shape = SubResource( 20 )

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 100, -90 )
current = true
limit_top = -10000006

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -25.0
